--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "android:build": "cd android && gradlew assembleRelease & cd ..",
+    "android:native": "react-native run-android --deviceId=85563ec5",
+    "android:reset": "yarn start --reset-cache",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "doctor": "react-native doctor",
@@ -25,6 +27,7 @@
     "axios": "^1.4.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-basic-carousel": "^1.0.9",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^12.1.1",
